[package]
authors.workspace = true
name = "pallet-bcmp-consumer"
version = "0.0.0"
edition.workspace = true

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", workspace = true, features = ["derive"] }
frame-support = { workspace = true }
frame-system.workspace = true
sp-std.workspace = true
scale-info = { workspace = true, features = ["derive", "serde", "decode"] }
pallet-bcmp.workspace = true
sp-core.workspace = true

[dev-dependencies]
pallet-balances = { workspace = true, default-features = true }
sp-runtime.workspace = true
sp-io.workspace = true

[features]
default = ["std"]
std = [
    'frame-support/std',
    'frame-system/std',
    'codec/std',
    'sp-std/std',
    'pallet-bcmp/std',
    'sp-core/std',
]